objects/SBQQ__PriceTier__c.object
<CustomObject>
    <description>Price Tier that specifies discount for a given quantity range.</description>
    <fields>
        <fullName>SBQQ__DiscountAmount__c</fullName>
        <description>Discount amount applied when quantity falls in this tier.</description>
        <inlineHelpText>Discount amount applied when quantity falls in this tier.</inlineHelpText>
        <label>Discount ({0})</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountPercentage__c</fullName>
        <description>Discount percentage applied when quantity falls in this tier.</description>
        <inlineHelpText>Discount percentage applied when quantity falls in this tier.</inlineHelpText>
        <label>Discount (%)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__LowerBound__c</fullName>
        <description>Lower bound of the quantity range for this tier</description>
        <inlineHelpText>Lower bound of the quantity range for this tier.</inlineHelpText>
        <label>Lower Bound</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Number__c</fullName>
        <description>Number indicating this tier&apos;s position within the schedule.</description>
        <inlineHelpText>Number indicating this tier&apos;s position within the schedule.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalBlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The block price where this price tier is originated from.</description>
        <inlineHelpText>The block price where this price tier is originated from.</inlineHelpText>
        <label>Original Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Price Tiers</relationshipLabel>
        <relationshipName>PriceTiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalDiscountTier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The discount tier where this price tier is originated from.</description>
        <inlineHelpText>The discount tier where this price tier is originated from.</inlineHelpText>
        <label>Original Discount Tier</label>
        <referenceTo>SBQQ__DiscountTier__c</referenceTo>
        <relationshipLabel>Price Tiers</relationshipLabel>
        <relationshipName>PriceTiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceModel__c</fullName>
        <description>The price model that determines how the prices are calculated.</description>
        <inlineHelpText>The price model that determines how the prices are calculated.</inlineHelpText>
        <label>Price Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PriceModel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceSchedule__c</fullName>
        <description>Price Schedule to which this tier belongs.</description>
        <inlineHelpText>Price Schedule to which this tier belongs.</inlineHelpText>
        <label>Schedule</label>
        <referenceTo>SBQQ__PriceSchedule__c</referenceTo>
        <relationshipLabel>Price Tiers</relationshipLabel>
        <relationshipName>PriceTiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__Price__c</fullName>
        <description>The actual price of this Price Tier. This field will be populated when a new set of Price Schedules are created for a new Order record.</description>
        <inlineHelpText>The actual price of this Price Tier. This field will be populated when a new set of Price Schedules are created for a new Order record.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscount__c</fullName>
        <description>The total term discount taken for this tier.</description>
        <inlineHelpText>The total term discount taken for this tier.</inlineHelpText>
        <label>Term Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpperBound__c</fullName>
        <description>Upper bound of the quantity range for this tier.</description>
        <inlineHelpText>Upper bound of the quantity range for this tier.</inlineHelpText>
        <label>Upper Bound</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__VolumnDiscount__c</fullName>
        <description>The total volume discount taken for this tier.</description>
        <inlineHelpText>The total volume discount taken for this tier.</inlineHelpText>
        <label>Volume Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Price Tier</label>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>